[gd_scene load_steps=3 format=3 uid="uid://bwivd844o8ja5"]

[ext_resource type="Script" path="res://prog52a.gd" id="1_1g146"]

[sub_resource type="LabelSettings" id="LabelSettings_uryox"]
font_size = 50

[node name="prog52a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1g146")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -2.0
offset_right = -845.0
offset_bottom = -519.0
grow_horizontal = 2
grow_vertical = 2
text = "Lenth:"
label_settings = SubResource("LabelSettings_uryox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 139.0
offset_right = -848.0
offset_bottom = -378.0
grow_horizontal = 2
grow_vertical = 2
text = "Width:"
label_settings = SubResource("LabelSettings_uryox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LBLout" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = 315.0
offset_right = -192.0
offset_bottom = -151.0
grow_horizontal = 2
grow_vertical = 2
text = "Width:"
label_settings = SubResource("LabelSettings_uryox")
horizontal_alignment = 1
vertical_alignment = 1

[node name="btn calc" type="Button" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 504.0
offset_right = 369.0
offset_bottom = 625.0
text = "Calculate
"

[node name="btn clear" type="Button" parent="."]
layout_mode = 0
offset_left = 441.0
offset_top = 501.0
offset_right = 650.0
offset_bottom = 624.0
text = "Clear
"

[node name="btn quit" type="Button" parent="."]
layout_mode = 0
offset_left = 728.0
offset_top = 506.0
offset_right = 937.0
offset_bottom = 627.0
text = "Quit
"

[node name="txtlen" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 521.0
offset_right = 959.0
offset_bottom = 135.0

[node name="pxtWid" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 523.0
offset_top = 166.0
offset_right = 961.0
offset_bottom = 301.0

[connection signal="pressed" from="btn calc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btn clear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btn quit" to="." method="_on_btn_quit_pressed"]
